重新生成代码, 增加请求约束
