# docs/swagger.json
@@ -41,14 +41,14 @@
                         "in": "query",
                         "required": true,
                         "type": "integer",
-                        "description": "页码"
+                        "description": "页码 最小值:1"
                     },
                     {
                         "name": "size",
                         "in": "query",
                         "required": true,
                         "type": "integer",
-                        "description": "每页数量"
+                        "description": "每页数量 数值范围:1-200"
                     },
                     {
                         "name": "name",
@@ -131,7 +131,8 @@
                         "name": "id",
                         "in": "query",
                         "required": true,
-                        "type": "integer"
+                        "type": "integer",
+                        "description": "记录ID 最小值:1"
                     }
                 ],
                 "responses": {
@@ -382,7 +383,7 @@
                         "in": "query",
                         "required": false,
                         "type": "integer",
-                        "description": "记录id列表"
+                        "description": "记录ID列表 最小值:1"
                     }
                 ],
                 "responses": {
@@ -441,7 +442,7 @@
                         "in": "query",
                         "required": true,
                         "type": "string",
-                        "description": "用户名"
+                        "description": "用户名 最小长度:2"
                     }
                 ],
                 "responses": {
@@ -589,14 +590,14 @@
                         "in": "query",
                         "required": true,
                         "type": "string",
-                        "description": "用户名"
+                        "description": "用户名 长度:6-16"
                     },
                     {
                         "name": "password",
                         "in": "query",
                         "required": true,
                         "type": "string",
-                        "description": "密码"
+                        "description": "密码 长度:8-20"
                     }
                 ],
                 "responses": {
@@ -724,11 +725,11 @@
             "properties": {
                 "page": {
                     "type": "integer",
-                    "description": "页码"
+                    "description": "页码 最小值:1"
                 },
                 "size": {
                     "type": "integer",
-                    "description": "每页数量"
+                    "description": "每页数量 数值范围:1-200"
                 },
                 "name": {
                     "type": "string",
@@ -797,7 +798,8 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "description": "记录ID 最小值:1"
                 }
             },
             "required": [
@@ -826,7 +828,7 @@
             "properties": {
                 "name": {
                     "type": "string",
-                    "description": "用户名"
+                    "description": "用户名 最小长度:2"
                 }
             },
             "required": [
@@ -860,11 +862,11 @@
             "properties": {
                 "name": {
                     "type": "string",
-                    "description": "用户名"
+                    "description": "用户名 长度:6-16"
                 },
                 "password": {
                     "type": "string",
-                    "description": "密码"
+                    "description": "密码 长度:8-20"
                 }
             },
             "required": [
